# flexible-isa

./: .gitignore  Cargo.toml  README.org  test_isa.sh  test_parse.sh
.github/workflows/: format.yml  test.yml
benchmarks/: Makefile  compile_commands.json
bisa/: Cargo.toml
bisa/scripts/: halide.rhai
bisa/src/: cli.rs  main.rs
cache/: add_aus.stmt  average_pool.stmt  camera_pipe.json  camera_pipe.stmt  conv3x3a16.stmt  conv3x3a32.stmt  conv_nn.json  depthwise_conv.json  depthwise_conv.stmt  depthwise_conv_aus.json  dilate3x3.stmt  gaussian5x5.stmt  l2norm.json  matmul.json  matmul.stmt  max_pool.stmt  mean.stmt  median3x3.stmt  mul.stmt  simple.json  simple.stmt  softmax.json
src/: cli.rs  lib.rs  main.rs  utils.rs
src/halide_ir/: annotation.rs  ast.rs  casts.rs  convert.rs  flatten.rs  generator_types.pest  generator_types.rs  halide_type.rs  inline.rs  insert_casts.rs  lift_expressions.rs  mine_exprs.rs  mod.rs  number_nodes.rs  parser.rs  printer.rs  rewrite.rs  stmt.pest  type_annotator.rs  unique_idents.rs  visitor.rs  visitor_composition.rs
src/instruction_select/: cost.rs  halide_equalities.rs  lang.rs  learn.rs  minimal_isa.rs  mod.rs  simplify.rs  typestate.rs
src/rewrite_recexpr/: mod.rs  rewrite.rs
test/: add.json  add.stmt  average_pool.json  blur3x3.json  blur3x3.stmt  camera_pipe.json  conv3x3a16.json  conv_nn.stmt  gaussian3x3.stmt  gaussian7x7.stmt  l2norm.stmt  mean.json  mul.json  sobel3x3.json  sobel3x3.stmt  softmax.stmt
tests/: long_tests.rs  short_tests.rs  tests.rs
tests/common/: mod.rs
tests/snapshots/: tests__single_isa@add.snap  tests__single_isa@average_pool.snap  tests__single_isa@blur3x3.snap  tests__single_isa@camera_pipe.snap  tests__single_isa@conv3x3a16.snap  tests__single_isa@conv3x3a32.snap  tests__single_isa@conv_nn.snap  tests__single_isa@depthwise_conv.snap  tests__single_isa@dilate3x3.snap  tests__single_isa@gaussian3x3.snap  (+10 more)
(+52 files in other folders)
