[workspace]
members = ["bisa"]

[package]
name = "flexible-isa"
version = "0.1.0"
edition = "2021"

[features]
pb = []
default = ["pb"]

[lib]
name = "flexible_isa"
path = "src/lib.rs"

[[bin]]
name = "flexible_isa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
babble = { git = "https://github.com/sgpthomas/babble.git" }
bon = "2.2.1"
# babble = { path = "../babble" }
closure = "0.3.0"
derive-deftly = "0.14.2"
egg = { git = "https://github.com/egraphs-good/egg.git", features = ["serde-1"] }
env_logger = "0.11.5"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
pest = "2.7.11"
pest_consume = "1.1.3"
pretty = { version = "0.12.3", features = ["termcolor"] }
rayon = "1.10.0"
serde = "1.0.209"
serde_json = "1.0.127"
smallvec = "1.13.2"

[dependencies.derive_more]
version = "1.0.0"
features = ["from_str", "display", "debug"]

[dev-dependencies]
insta = "1.39.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
